<resources>
    <string name="app_name">MealTally</string>

    <!-- Form labels -->
    <string name="form_location_label">Location</string>
    <string name="form_meal_type_label">Meal Type</string>
    <string name="form_meals_from_vendor_label">Meals from vendor:</string>
    <string name="form_meals_leftover_label">Meals leftover from yesterday</string>
    <string name="form_meals_total_label">= Total meals</string>
    <string name="form_meals_total_label2">Total meals</string>
    <string name="form_meals_served_label">Meals served</string>
    <string name="form_adult_label">Adults:</string>
    <string name="form_children_label">Children:</string>
    <string name="form_staff_volunteer_label">Staff:</string>
    <string name="form_certify_info_label">By entering my full name below, I certify that the above information is true and accurate:</string>
    <string name="form_signature_label">Site supervisor\'s name</string>
    <string name="form_date_label">Date</string>
    <string name="form_next_button">Next</string>
    <string name="form_total_meals_served">Total Meals served:</string>
    <string name="form_total_damaged">Total Damage/Incomplete/Other non-reimbursable meals</string>
    <string name="form_total_leftover">Total left-over meals not served(can only carry over snacks and lunch kits)</string>
</resources>
