<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/content_main"
    android:background="@color/colorNeutral"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:text="@string/form_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/FormLabelTextView"/>

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="Dr. Roberto Cruz..."
            android:padding="14dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:background="@color/colorPrimaryDark"
            android:layout_width="20dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <TextView
        android:text="@string/form_meal_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/FormLabelTextView"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/breakfastText"
                android:text="Breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MealTypeTextView"/>

            <TextView
                android:id="@+id/AMSnackText"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="AM Snack"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MealTypeTextView"/>

            <TextView
                android:id="@+id/lunchText"
                android:text="Lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MealTypeTextView"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/PMSnackText"
                android:text="PM Snack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MealTypeTextView"/>

            <TextView
                android:text="Supper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MealTypeTextView"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/form_meals_from_vendor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/form_meals_leftover_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/form_meals_total_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:text="@string/form_meals_served_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/FormLabelTextView"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/form_children_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/form_adult_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
