<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <View
        android:layout_margin="16dp"
        android:background="@color/overlayShadow"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/damaged"
            android:maxLines="1"
            android:maxLength="3"
            android:singleLine="true"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:background="@drawable/text_field_border"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:onClick="setDamaged"
            android:ems="2"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <TextView
            android:text="@string/form_total_damaged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FormLabelTextView"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/wasted"
            android:layout_marginRight="5dp"
            android:maxLength="3"
            android:background="@drawable/text_field_border"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:onClick="setWasted"
            android:imeOptions="actionDone"
            android:ems="2"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <TextView
            android:text="@string/form_total_leftover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FormLabelTextView"/>


    </LinearLayout>

    <View
        android:layout_margin="16dp"
        android:background="@color/overlayShadow"
        android:layout_width="match_parent"
        android:layout_height="3dp"/>

    <TextView
        android:layout_margin="16dp"
        android:text="@string/form_certify_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/form_signature_label"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FormLabelTextView"/>

        <EditText
            android:id="@+id/signature"
            android:background="@drawable/text_field_border"
            android:layout_marginRight="16dp"
            android:padding="2dp"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:text="Submit"
        android:textStyle="bold"
        android:onClick="submitForm"
        android:layout_gravity="right"
        android:textColor="@color/white"
        android:background="@color/material_red_dark"
        android:layout_margin="16dp"
        android:layout_marginBottom="25dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"/>

</LinearLayout>