<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_below="@id/top"
                android:layout_marginTop="5dp"
                android:background="@color/colorNeutral"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/childrenLabel"
                    android:text="@string/form_children_label"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FoodCountLabel"/>

                <Button
                    android:id="@+id/childrenFoodButton"
                    android:background="@drawable/food_counter_button_selector"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    style="@style/FoodCounterButton"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/adultsLabel"
                    android:text="@string/form_adult_label"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FoodCountLabel"/>

                <Button
                    android:id="@+id/adultsFoodButton"
                    android:background="@drawable/food_counter_button_selector"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/staffLabel"
                    android:text="@string/form_staff_volunteer_label"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FoodCountLabel"/>

                <Button
                    android:id="@+id/staffFoodButton"
                    android:background="@drawable/food_counter_button_selector"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>

            </LinearLayout>

        </LinearLayout>

</RelativeLayout>