<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/formContainer"
              android:background="@color/colorNeutral"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/locationLabel"
            android:text="@string/form_location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FormLabelTextView"/>

        <LinearLayout
            android:id="@+id/libraryPurpleOverlay"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/locationText"
                android:text="MLK LIBRARY"
                android:padding="14dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:lines="1"
                android:ems="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/locationButton"
                android:src="@drawable/ic_enter_arrow"
                android:background="@color/colorPrimaryDark"
                android:layout_width="20dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <TextView
            android:id="@+id/mealLabel"
            android:text="@string/form_meal_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FormLabelTextView"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/breakfastText"
                    android:text="Breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MealTypeTextView"/>

                <TextView
                    android:id="@+id/AMSnackText"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:text="AM Snack"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MealTypeTextView"/>

                <TextView
                    android:id="@+id/lunchText"
                    android:text="Lunch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MealTypeTextView"/>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/PMSnackText"
                    android:text="PM Snack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MealTypeTextView"/>

                <TextView
                    android:text="Supper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MealTypeTextView"/>

                <TextView
                    android:text="Hidden Meal"
                    android:id="@+id/mealTypeText"
                    android:layout_below="@id/AMSnackText"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MealTypeTextView"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mealsVendor"
                android:text="@string/form_meals_from_vendor_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FormLabelTextView"/>
            <TextView
                android:id="@+id/mealsLeftover"
                android:text="@string/form_meals_leftover_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FormLabelTextView"/>

            <TextView
                android:id="@+id/mealsTotal"
                android:text="@string/form_meals_total_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FormLabelTextView"/>

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:background="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/nextButton"
                android:text="NEXT"
                android:padding="14dp"
                android:background="@color/colorAccent"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:lines="1"
                android:ems="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/nextArrowTop"
                android:src="@drawable/ic_keyboard_arrow_up"
                android:background="@color/colorPrimaryDark"
                android:layout_width="20dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>



    <include layout="@layout/food_counter_minimized"/>

    <View
        android:id="@+id/foodCounterOverlay"
        android:background="@color/overlayShadow"
        android:layout_below="@id/top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</RelativeLayout>