<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_below="@id/top"
                android:paddingTop="100dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNeutral"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/scene2_container"
        android:orientation="horizontal"
        android:paddingBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/childrenLabel"
                android:text="@string/form_children_label"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FoodCountLabelMini"/>

            <Button
                android:id="@+id/childrenFoodButton"
                android:background="@drawable/food_counter_button_selector"
                android:layout_width="70dp"
                android:layout_height="70dp"
                style="@style/FoodCounterButton"/>

            <Button
                android:id="@+id/childrenMinusButton"
                android:background="@drawable/food_counter_minus_selector"
                android:layout_marginTop="15dp"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/adultsLabel"
                android:text="@string/form_adult_label"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FoodCountLabelMini"/>

            <Button
                android:id="@+id/adultsFoodButton"
                android:background="@drawable/food_counter_button_selector"
                android:layout_width="70dp"
                android:layout_height="70dp"
                style="@style/FoodCounterButton"/>

            <Button
                android:id="@+id/adultsMinusButton"
                android:background="@drawable/food_counter_minus_selector"
                android:layout_marginTop="15dp"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/staffLabel"
                android:text="@string/form_staff_volunteer_label"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FoodCountLabelMini"/>

            <Button
                android:id="@+id/staffFoodButton"
                android:background="@drawable/food_counter_button_selector"
                android:layout_width="70dp"
                android:layout_height="70dp"
                style="@style/FoodCounterButton"/>

            <Button
                android:id="@+id/staffMinusButton"
                android:background="@drawable/food_counter_minus_selector"
                android:layout_marginTop="15dp"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button2_container"
        android:layout_below="@id/scene2_container"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scene2_container"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="100dp"
                android:id="@+id/totalServedLabel"
                android:text="@string/form_total_meals_served"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FoodCountLabel"/>

            <TextView
                android:id="@+id/totalServedText"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FoodCountLabel"/>


            <View
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"/>

            <Button
                android:id="@+id/nextButton2"
                android:text="NEXT"
                android:padding="14dp"
                android:background="@color/colorAccent"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:lines="1"
                android:ems="10"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

            <ImageView
                android:id="@+id/nextArrowTop2"
                android:src="@drawable/ic_keyboard_arrow_down"
                android:background="@color/colorAccentDark"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>